--- a/trade.css
+++ b/trade.css
@@ -33,3 +33,20 @@ button:hover{background-color:teal;}
 table,th,td{border-collapse:collapse;
 border:1px solid black;
 margin-top:40px;}
+.btn-container {
+  display: flex;
+  justify-content: flex-start; /* left alignment */
+  gap: 12px;                  /* space between buttons */
+  margin-left: 20px;          
+}
+
+#b1, #b2, #b3 {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+  padding: 10px;
+  height: 50px;
+  width: 150px;   /* same width for all */
+}
+
